--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,8 @@
               "src/styles.scss",
               "./node_modules/bootstrap/dist/css/bootstrap.min.css",
               "./node_modules/@fortawesome/fontawesome-free/css/fontawesome.min.css",
-              "./node_modules/pretty-checkbox/dist/pretty-checkbox.min.css"
+              "./node_modules/pretty-checkbox/dist/pretty-checkbox.min.css",
+              "./node_modules/@ng-select/ng-select/themes/default.theme.css"
             ],
             "scripts": [
               "./node_modules/jquery/dist/jquery.min.js",
@@ -92,6 +93,7 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.scss"
             ],
             "scripts": [],
