--- a/angular.json
+++ b/angular.json
@@ -29,15 +29,15 @@
             "styles": [
               "src/styles.scss",
               "./node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "./node_modules/@fortawesome/fontawesome-free/css/fontawesome.min.css",
+              "./node_modules/font-awesome/scss/font-awesome.scss",
               "./node_modules/pretty-checkbox/dist/pretty-checkbox.min.css",
-              "./node_modules/@ng-select/ng-select/themes/default.theme.css"
+              "./node_modules/@ng-select/ng-select/themes/default.theme.css",
+              "./node_modules/ngx-bootstrap/datepicker/bs-datepicker.css"
             ],
             "scripts": [
               "./node_modules/jquery/dist/jquery.min.js",
               "./node_modules/popper.js/dist/umd/popper.min.js",
               "./node_modules/bootstrap/dist/js/bootstrap.min.js",
-              "./node_modules/@fortawesome/fontawesome-free/js/fontawesome.min.js",
               "./node_modules/moment/min/moment.min.js"
             ]
           },
@@ -93,6 +93,7 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
+              "./node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
               "./node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.scss"
             ],
