Enhancement: build configurations done

--- a/package.json
+++ b/package.json
@@ -1,9 +1,16 @@
 {
   "name": "ghaana",
   "version": "0.0.0",
+  "engines": {
+    "node": "8.12.0",
+    "npm": "6.4.1"
+  },
   "scripts": {
     "ng": "ng",
     "start": "ng serve --host 0.0.0.0 --open --port=5000",
+    "dev": "ng build --prod -c=dev",
+    "uat": "ng build --prod -c=uat",
+    "prod": "ng build --prod -c=production",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -45,7 +52,7 @@
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~3.1.1",
+    "karma": "^4.2.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
